# mining-quality-prediction

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
api/: examples.py  main.py  schemas.py
config/: config.yaml
data/raw/: README.md
models/: model_card.md  selected_features.json
models/champion/: metadata.json  model.txt  sample_hourly.parquet
notebooks/: 01_data_understanding.ipynb  02_feature_engineering_modeling.ipynb  03_explainability.ipynb  04_scenario_simulation.ipynb  05_reasoning_conclusions.ipynb
reports/: experiments_log.txt  pipeline_log.txt  tuning_log.txt
reports/experiments/: bias_variants.json  cv_schemes.json  ensembles.json  final_results.json  permutation_importance.csv  pruning.json
reports/tuning/: best_lightgbm-delta.json  best_lightgbm-level.json  best_xgboost-delta.json  best_xgboost-level.json  trials_lightgbm-delta.csv  trials_lightgbm-level.csv  trials_xgboost-delta.csv  trials_xgboost-level.csv
scripts/: package_model.py  run_experiments.py  run_pipeline.py  tune_models.py
src/: config.py  envcheck.py
src/data/: load.py  preprocess.py
src/explain/: shap_analysis.py
src/features/: build.py
src/models/: baseline.py  bias.py  cv.py  delta.py  ensemble.py  evaluate.py  registry.py  splits.py  train.py  tuning.py
src/reasoning/: graph.py  llm.py  nodes.py  state.py
src/simulation/: scenarios.py
tests/: test_api.py  test_features.py  test_packaging.py  test_preprocess.py
web/: index.html
web/css/: style.css
web/js/: api.js  charts.js  main.js  ui.js
